tests/snapshots/snapshot_test__project_hmm_bottom_child_junction_characters.snap
---
source: tests/snapshot_test.rs
expression: terminal.backend()
---
"                                                                              ├Header ────┴User Account                 "
"                                                                              │                                         "
"                                                                              │                    ╭Product Grid        "
"                                                                              │                    │                    "
"                                                                              │                    ├Product Card        "
"                                                                              ├Product Catalog ────┤                    "
"                                                              ╭Components ────┤                    ├Filters             "
"                                                              │               │                    │                    "
"                                                              │               │                    ╰Search Bar          "
"                                                              │               │                                         "
"                                                              │               │                  ╭Cart Items            "
"                                                              │               │                  │                      "
"                         ╭Frontend ─────React Application ────┤               ├Shopping Cart ────┼Checkout Button       "
"                         │                                    │               │                  │                      "
"                         │                                    │               │                  ╰Price Calculator      "
"                         │                                    │               │                                         "
"                         │                                    │               ╰Footer                                   "
"                         │                                    │                                                         "
"                         │                                    │                                      ╭User State        "
"                         │                                    │                                      │                  "
"                         │                                    ├State Management ─────Redux Store ────┼Cart State        "
"                         │                                    │                                      │                  "
"                         │                                    │                                      ╰Product State     "
"                         │                                    │                                                         "
"h-m-m | 80 nodes                                                                                                        "
