tests/snapshots/snapshot_test__project_hmm_database_section_scroll.snap
---
source: tests/snapshot_test.rs
expression: terminal.backend()
---
"                         ├Backend ─────Node.js API ────┤                                                                "
"                         │                             │                  ╭/api/auth                                    "
"                         │                             │                  │                                             "
" E-Commerce Platform ────┤                             │                  ├/api/products                                "
"                         │                             ├API Endpoints ────┤                                             "
"                         │                             │                  ├/api/orders                                  "
"                         │                             │                  │                                             "
"                         │                             │                  ╰/api/payments                                "
"                         │                             │                                                                "
"                         │                             │               ╭Auth Middleware                                 "
"                         │                             │               │                                                "
"                         │                             ╰Middleware ────┼Error Handler                                   "
"                         │                                             │                                                "
"                         │                                             ╰Rate Limiter                                    "
"                         │                                                                                              "
"                         │                                         ╭users                                               "
"                         │                                         │                                                    "
"                         │                                         ├products                                            "
"                         │                             ╭Tables ────┤                                                    "
"                         │                             │           ├orders                                              "
"                         ├Database ─────PostgreSQL ────┤           │                                                    "
"                         │                             │           ╰payments                                            "
"                         │                             │                                                                "
"                         │                             ├Indexes                                                         "
"                         │                             │                                                                "
"                         │                             ╰Stored Procedures                                               "
"                         │                                                                                              "
"                         │                                                   ╭Build Stage                               "
"                         │                                                   │                                          "
"h-m-m | 80 nodes                                                                                                        "
