tests/snapshots/snapshot_test__project_hmm_deep_scroll_sticky_parents.snap
---
source: tests/snapshot_test.rs
expression: terminal.backend()
---
"                                                                 Components       Product Catalog                       "
"                                                                                                        Search Bar      "
"                                                                                                                        "
"                                                                                                      Cart Items        "
"                                                                                                                        "
"                           Frontend      React Application                        Shopping Cart       Checkout Button   "
"                                                                                                                        "
"                                                                                                      Price Calculator  "
"                                                                                                                        "
"                                                                                  Footer                                "
"                                                                                                                        "
"                                                                                                         User State     "
"                                                                                                                        "
"                                                                 State Management      Redux Store       Cart State     "
"                                                                                                                        "
"                                                                                                         Product State  "
"                                                                                                                        "
"                                                                               Home Page                                "
"                                                                                                                        "
"                                                                 Routing       Product Details                          "
"                                                                                                                        "
"                                                                               Checkout Flow                            "
"                                                                                                                        "
"                                                                               JWT Tokens                               "
"                                                                                                                        "
"                                                          Authentication                               Google Auth      "
"                                                                               OAuth Integration                        "
"                                                                                                       Facebook Auth    "
"                                                                                                                        "
"h-m-m | 80 nodes                                                                                                        "
