tests/snapshots/snapshot_test__project_hmm_scroll_to_oauth_integration.snap
---
source: tests/snapshot_test.rs
expression: terminal.backend()
---
"                         │Frontend ─────React Application ────┴Routing ────┼Product Details                             "
"                         │                                                 │                                            "
"                         │                                                 ╰Checkout Flow                               "
"                         │                                                                                              "
"                         │                                                 ╭JWT Tokens                                  "
"                         │                                                 │                                            "
"                         │                             ╭Authentication ────┤                      ╭Google Auth          "
"                         │                             │                   ╰OAuth Integration ────┤                     "
"                         │                             │                                          ╰Facebook Auth        "
"                         │                             │                                                                "
"                         │                             │                    ╭User Model                                 "
"                         │                             │                    │                                           "
"                         │                             │                    ├Product Model                              "
"                         │                             ├Database Models ────┤                                           "
"                         │                             │                    ├Order Model                                "
"                         │                             │                    │                                           "
"                         │                             │                    ╰Payment Model                              "
"                         ├Backend ─────Node.js API ────┤                                                                "
"                         │                             │                  ╭/api/auth                                    "
"                         │                             │                  │                                             "
" E-Commerce Platform ────┤                             │                  ├/api/products                                "
"                         │                             ├API Endpoints ────┤                                             "
"                         │                             │                  ├/api/orders                                  "
"                         │                             │                  │                                             "
"                         │                             │                  ╰/api/payments                                "
"                         │                             │                                                                "
"                         │                             │               ╭Auth Middleware                                 "
"                         │                             │               │                                                "
"                         │                             ╰Middleware ────┼Error Handler                                   "
"h-m-m | 80 nodes                                                                                                        "
