tests/snapshots/snapshot_test__project_hmm_sticky_grandparent_connections.snap
---
source: tests/snapshot_test.rs
expression: terminal.backend()
---
"                         │Frontend ─────React Application ────┤                                                         "
"                         │                                    │            ╭Home Page                                   "
"                         │                                    │            │                                            "
"                         │                                    ╰Routing ────┼Product Details                             "
"                         │                                                 │                                            "
"                         │                                                 ╰Checkout Flow                               "
"                         │                                                                                              "
"                         │                                                 ╭JWT Tokens                                  "
"                         │                                                 │                                            "
"                         │                             ╭Authentication ────┤                      ╭Google Auth          "
"                         │                             │                   ╰OAuth Integration ────┤                     "
"                         │                             │                                          ╰Facebook Auth        "
"                         │                             │                                                                "
"                         │                             │                    ╭User Model                                 "
"                         │                             │                    │                                           "
"                         │                             │                    ├Product Model                              "
"                         │                             ├Database Models ────┤                                           "
"                         │                             │                    ├Order Model                                "
"                         │                             │                    │                                           "
"                         │                             │                    ╰Payment Model                              "
"                         ├Backend ─────Node.js API ────┤                                                                "
"                         │                             │                  ╭/api/auth                                    "
"                         │                             │                  │                                             "
" E-Commerce Platform ────┤                             │                  ├/api/products                                "
"                         │                             ├API Endpoints ────┤                                             "
"                         │                             │                  ├/api/orders                                  "
"                         │                             │                  │                                             "
"                         │                             │                  ╰/api/payments                                "
"                         │                             │                                                                "
"h-m-m | 80 nodes                                                                                                        "
