tests/snapshots/snapshot_test__project_hmm_testing_section_deep_scroll.snap
---
source: tests/snapshot_test.rs
expression: terminal.backend()
---
" E-Commerce Platform ────┤                                                   ╭Build Stage                               "
"                         │                                                   │                                          "
"                         │           ╭CI/CD Pipeline ─────GitHub Actions ────┼Test Stage                                "
"                         │           │                                       │                                          "
"                         │           │                                       ╰Deploy Stage                              "
"                         │           │                                                                                  "
"                         │           │           ╭Frontend Container                                                    "
"                         │           │           │                                                                      "
"                         ├DevOps ────┼Docker ────┼Backend Container                                                     "
"                         │           │           │                                                                      "
"                         │           │           ╰Database Container                                                    "
"                         │           │                                                                                  "
"                         │           │               ╭Deployment Config                                                 "
"                         │           │               │                                                                  "
"                         │           ╰Kubernetes ────┼Service Config                                                    "
"                         │                           │                                                                  "
"                         │                           ╰Ingress Config                                                    "
"                         │                                                                                              "
"                         │                            ╭Component Tests                                                  "
"                         │            ╭Unit Tests ────┤                                                                 "
"                         │            │               ╰API Tests                                                        "
"                         │            │                                                                                 "
"                         ╰Testing ────┼Integration Tests                                                                "
"                                      │                                                                                 "
"                                      │              ╭Cypress Tests                                                     "
"                                      ╰E2E Tests ────┤                                                                  "
"                                                     ╰User Flow Tests                                                   "
"                                                                                                                        "
"                                                                                                                        "
"h-m-m | 80 nodes                                                                                                        "
