tests/snapshots/snapshot_test__render_deep_tree.snap
---
source: tests/snapshot_test.rs
expression: terminal.backend()
---
"                                                                                "
" Root ───── Level 1 ───── Level 2 ───── Level 3 ───── Level 4                   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"h-m-m | 5 nodes                                                                 "
