tests/snapshots/snapshot_test__render_edit_mode.snap
---
source: tests/snapshot_test.rs
expression: terminal.backend()
---
"                                                                                "
"                                  ╭ ✓ Completed Task                            "
"                   ╭ Features ────┤                                             "
"                   │              ╰ ✗ Failed Task                               "
" Mind Map Root ────┤                                                            "
"                   │                  ╭ model.rs                                "
"                   ╰ Architecture ────┤                                         "
"                                      ╰ ui.rs                                   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"Edit: Editing this node▌                                                        "
