tests/snapshots/snapshot_test__render_empty_mindmap.snap
---
source: tests/snapshot_test.rs
expression: terminal.backend()
---
"                                                                                "
" Empty Map                                                                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"h-m-m | 1 nodes                                                                 "
