tests/snapshots/snapshot_test__render_search_mode.snap
---
source: tests/snapshot_test.rs
assertion_line: 131
expression: terminal.backend()
---
"                                                                                "
"                                  ╭ ✓ Completed Task                            "
"                   ╭ Features ────┤                                             "
"                   │              ╰ ✗ Failed Task                               "
" Mind Map Root ────┤                                                            "
"                   │                  ╭ model.rs                                "
"                   ╰ Architecture ────┤                                         "
"                                      ╰ ui.rs                                   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"Search: test search                                                             "
