tests/snapshots/snapshot_test__render_simple_tree.snap
---
source: tests/snapshot_test.rs
expression: terminal.backend()
---
"                                                                                "
"                                  ╭ ✓ Completed Task                            "
"                   ╭ Features ────┤                                             "
"                   │              ╰ ✗ Failed Task                               "
" Mind Map Root ────┤                                                            "
"                   │                  ╭ model.rs                                "
"                   ╰ Architecture ────┤                                         "
"                                      ╰ ui.rs                                   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"h-m-m | 7 nodes                                                                 "
